[package]
name = "cbc"
version = "0.1.0"
edition = "2021"
description = "Capability Binding Config (CBC) - Support for dynamic provider discovery for AI MCP clients"
authors = ["Zac Elston"]
readme = "README.md"
repository = "https://github.com/zacharyelston/CBC"
license = "MIT"

[dependencies]
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Model Context Protocol Rust SDK
rmcp = "0.1" # Adjust version as needed
rmcp-macros = "0.1" # Adjust version as needed

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
tempfile = "3.8"

[features]
default = []
test-integration = []